# trajectorymetrics

./: .gitignore  CMakeLists.txt  README.md
include/: comparator.hpp  trajectory.hpp
src/: comparator.cpp  main.cpp  trajectory.cpp
